syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesdaemonset.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesdaemonset/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesdaemonset/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// KubernetesDaemonSet is a Kubernetes resource that ensures all (or some) nodes run a copy of a pod.
// Common use cases include cluster storage daemons, log collection daemons, and node monitoring daemons.
message KubernetesDaemonSet {
  // api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  // resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesDaemonSet'];

  // metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // spec
  KubernetesDaemonSetSpec spec = 4 [(buf.validate.field).required = true];

  // status
  KubernetesDaemonSetStatus status = 5;
}

// KubernetesDaemonSetStatus represents the status of the KubernetesDaemonSet resource.
message KubernetesDaemonSetStatus {
  // stack-outputs
  KubernetesDaemonSetStackOutputs outputs = 1;
}
